--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/language-service": "~12.2.4",
     "@capacitor/cli": "3.2.0",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.23",
