--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
+    "@ionic-native/speech-recognition": "^5.36.0",
     "@ionic/angular": "^5.7.0",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "httpclient": "^0.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
