--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "@angular/platform-browser": "~12.2.4",
     "@angular/platform-browser-dynamic": "~12.2.4",
     "@angular/router": "~12.2.4",
+    "@awesome-cordova-plugins/document-viewer": "^5.39.1",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.2.0",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
+    "@ionic-native/document-viewer": "^5.36.0",
+    "@ionic-native/file": "^5.36.0",
+    "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/speech-recognition": "^5.36.0",
     "@ionic/angular": "^5.7.0",
+    "cordova-plugin-document-viewer": "^1.0.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "httpclient": "^0.1.0",
     "rxjs": "~6.6.0",
