--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~12.2.4",
     "@angular/common": "~12.2.4",
     "@angular/compiler": "~12.2.4",
     "@angular/core": "~12.2.4",
     "@angular/forms": "~12.2.4",
+    "@angular/language-service": "~12.2.4",
     "@angular/platform-browser": "~12.2.4",
     "@angular/platform-browser-dynamic": "~12.2.4",
     "@angular/router": "~12.2.4",
     "@awesome-cordova-plugins/document-viewer": "^5.39.1",
+    "@capacitor/android": "^3.5.0",
     "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.2.0",
+    "@capacitor/core": "^3.2.0",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
@@ -31,15 +34,40 @@
     "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/speech-recognition": "^5.36.0",
     "@ionic/angular": "^5.7.0",
+    "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/lab": "3.2.10",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.20.23",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "chart.js": "^3.7.1",
+    "cordova": "^11.0.0",
     "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-speechrecognition": "^1.2.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "httpclient": "^0.1.0",
+    "ionic": "^5.4.16",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ng2-charts": "^3.0.8",
+    "protractor": "~7.0.0",
     "rxjs": "~6.6.0",
+    "ts-node": "~8.3.0",
     "tslib": "^2.2.0",
+    "typescript": "~4.2.4",
+    "voice-recognition": "^1.0.6",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -51,7 +79,13 @@
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.4",
     "@angular/language-service": "~12.2.4",
-    "@capacitor/cli": "3.2.0",
+    "@capacitor/android": "^3.5.0",
+    "@capacitor/app": "1.0.2",
+    "@capacitor/cli": "^3.2.0",
+    "@capacitor/core": "^3.2.0",
+    "@capacitor/haptics": "1.0.2",
+    "@capacitor/keyboard": "1.0.2",
+    "@capacitor/status-bar": "1.0.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
@@ -59,6 +93,7 @@
     "@types/node": "^12.20.23",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "chart.js": "^3.7.1",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
