--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "heroku-postbuild": "ng build --prod",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -69,6 +70,10 @@
     "typescript": "~4.2.4",
     "voice-recognition": "^1.0.6",
     "zone.js": "~0.11.4"
+  },
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.4",
