--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "express": "^4.18.1",
     "httpclient": "^0.1.0",
     "ionic": "^5.4.16",
     "jasmine-core": "~3.8.0",
@@ -63,6 +64,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng2-charts": "^3.0.8",
+    "path": "^0.12.7",
     "protractor": "~7.0.0",
     "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
