--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@ionic-native/document-viewer": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/file-transfer": "^5.36.0",
+    "@ionic-native/pdf-generator": "^5.36.0",
     "@ionic-native/speech-recognition": "^5.36.0",
+    "@ionic-native/text-to-speech": "^5.36.0",
     "@ionic/angular": "^5.7.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/lab": "3.2.10",
@@ -94,6 +96,8 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "chart.js": "^3.7.1",
+    "cordova-pdf-generator": "^2.1.1",
+    "cordova-plugin-tts": "^0.2.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -110,5 +114,11 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-speechrecognition": {},
+      "cordova-pdf-generator": {}
+    }
+  }
 }
